fix: align header nav

--- a/online-zoo/pages/error-404/error-404.css
+++ b/online-zoo/pages/error-404/error-404.css
@@ -50,8 +50,7 @@ header {
   width: 54px;
 }
 .nav-wrapper__map {
-  display: block;
-  width: 35px;
+  width: 56px;
 }
 .nav-wrapper__zoos {
   display: block;
@@ -73,7 +72,8 @@ header {
   margin-right: 92px;
 }
 .nav-wrapper nav {
-  margin-left: 92px;
+  margin-left: 89px;
+  margin-top: 4px;
 }
 .nav-wrapper nav ul {
   width: 800px;
