--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -53,8 +53,7 @@ header {
   width: 54px;
 }
 .nav-wrapper__map {
-  display: block;
-  width: 35px;
+  width: 56px;
 }
 .nav-wrapper__zoos {
   display: block;
@@ -76,7 +75,8 @@ header {
   margin-right: 92px;
 }
 .nav-wrapper nav {
-  margin-left: 92px;
+  margin-left: 89px;
+  margin-top: 4px;
 }
 .nav-wrapper nav ul {
   width: 800px;
